[package]
name = "lpc55s6x-pac"
version = "0.0.3"
edition = "2018"
authors = [
  "Nicolas Stalder <n@stalder.io>",
]
description = "Peripheral access API for NXP LPC55s6x microcontrollers"
repository = "https://github.com/nickray/lpc55s6x-pac"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/lpc55s6x-pac"
categories = ["embedded", "no-std"]
keywords = ["no-std", "cortex-m", "nxp", "lpc", "svd2rust"]

[badges]
circle-ci = { repository = "nickray/lpc55s6x-pac" }

[dependencies]
bare-metal = "0.2"
cortex-m = "0.6"
cortex-m-rt = { version = "0.6", optional = true }
vcell = "0.1"

[features]
rt = ["cortex-m-rt/device"]
