[package]
name = "lpc55-pac"
version = "0.1.0"
edition = "2018"
authors = [
  "Nicolas Stalder <n@stalder.io>",
  "Conor Patrick <conorpp94@gmail.com>",
]
description = "Peripheral access API for NXP LPC55 microcontrollers"
repository = "https://github.com/nickray/lpc55-pac"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/lpc55-pac"
categories = ["embedded", "no-std"]
keywords = ["no-std", "cortex-m", "nxp", "lpc", "svd2rust"]
exclude = [
  "svd/*",
  "lpc55.svd",
]

[package.metadata.docs.rs]
features = ["rt"]
targets = []



[badges]
circle-ci = { repository = "nickray/lpc55-pac" }
maintenance = { status = "actively-maintained" }

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.2"
cortex-m-rt = { version = "0.6.12", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]
