[package]
name = "lpc55-pac"
version = "0.4.0"
edition = "2018"
authors = [
  "Nicolas Stalder <n@stalder.io>",
  "Conor Patrick <conorpp94@gmail.com>",
]
description = "Peripheral access API for NXP LPC55 microcontrollers"
repository = "https://github.com/lpc55/lpc55-pac"
license = "Apache-2.0 OR MIT"
readme = "README.md"
documentation = "https://docs.rs/lpc55-pac"
categories = ["embedded", "no-std"]
keywords = ["no-std", "cortex-m", "nxp", "lpc", "svd2rust"]
exclude = [
  "svd/*",
  "lpc55.svd",
]

[package.metadata.docs.rs]
features = ["rt"]
targets = []

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# can't update: https://github.com/rust-embedded/svd2rust/issues/453
cortex-m = "0.7.0"
cortex-m-rt = { version = "0.6.13", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]
